<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.estrada.darlin.calculadora.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">
        <EditText
            android:id="@+id/num1"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Primer_num"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:gravity="top"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">
        <TextView
            android:id="@+id/signo"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:textSize="24dp"
            android:gravity="center"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.1">
        <EditText
            android:id="@+id/num2"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/Segundo_num"
            android:singleLine="true"
            android:inputType="numberDecimal"
            android:gravity="top"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.5"
        android:orientation="horizontal">

        <RadioGroup
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.5"
            android:orientation="vertical">
            <RadioButton
                android:id="@+id/suma"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:hint="@string/suma"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/resta"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:hint="@string/resta"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/multi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:hint="@string/multiplicacion"
                android:onClick="onRadioButtonClicked"/>
            <RadioButton
                android:id="@+id/div"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_weight="0.2"
                android:hint="@string/division"
                android:onClick="onRadioButtonClicked"/>
        </RadioGroup>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2"
        android:gravity="center">
        <Button
            android:id="@+id/calcula"
            android:layout_width="200dp"
            android:layout_height="50dp"
            android:gravity="center"
            android:textColorHint="@color/white"
            android:hint="Calcular"
            android:textSize="30dp"
            android:background="@color/blue"
            android:onClick="buttonOnClick"/>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.2">
        <TextView
            android:id="@+id/resul"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:hint="@string/resul"
            android:textSize="24dp"
            android:gravity="center"/>
    </LinearLayout>
</LinearLayout>
